# api/openapi.yml
@@ -208,6 +208,15 @@ paths:
       responses:
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    $ref: "#/components/schemas/id"
+                  username:
+                    type: string
         '400':
           description: Bad Request
           content:
@@ -247,7 +256,7 @@ components:
       properties:
         errorType:
           type: string
-          enum: [Validation]
+          enum: [Validation, Conflict]
         body:
           type: string
     getActorsResponse:
@@ -272,7 +281,7 @@ components:
       properties:
         id:
           type: integer
-          format: int64
+          format: int32
         info:
           $ref: "#/components/schemas/actorInfo"
         films:
@@ -284,7 +293,7 @@ components:
       properties:
         id:
           type: integer
-          format: int64
+          format: int32
         info:
           $ref: "#/components/schemas/filmInfo"
         actors:
@@ -330,7 +339,7 @@ components:
     id:
       description: identificator
       type: integer
-      format: int64
+      format: int32
   parameters:
     actorId:
       name: id
@@ -338,7 +347,7 @@ components:
       required: true
       schema:
         type: integer
-        format: int64
+        format: int32
       description: The actor id
     filmId:
       name: id
@@ -346,7 +355,7 @@ components:
       required: true
       schema:
         type: integer
-        format: int64
+        format: int32
       description: The actor id
     filmSort:
       name: sort
